force-app/main/default/objects/Account/fields/RecentDate__c.field-meta.xml
<CustomField>
    <fullName>RecentDate__c</fullName>
    <label>RecentDate</label>
    <type>DateTime</type>
</CustomField>