force-app/main/default/objects/Account/fields/RollUpFieldOnAccount__c.field-meta.xml
<CustomField>
    <fullName>RollUpFieldOnAccount__c</fullName>
    <label>RollUpFieldOnAccount</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>