force-app/main/default/objects/Account/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>TotalAmount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>