force-app/main/default/objects/Account/validationRules/VRFirst1.validationRule-meta.xml
<ValidationRule>
    <fullName>VRFirst1</fullName>
    <active>false</active>
    <errorConditionFormula>AnnualRevenue &lt; 0  ||   ISPICKVAL( Rating , &apos;&apos;)</errorConditionFormula>
    <errorMessage>Either Annual Revenue or Rating filed needs to corrected!!.</errorMessage>
</ValidationRule>