force-app/main/default/objects/Account/validationRules/VRFirst2.validationRule-meta.xml
<ValidationRule>
    <fullName>VRFirst2</fullName>
    <active>false</active>
    <errorConditionFormula>AnnualRevenue  &lt; 1</errorConditionFormula>
    <errorMessage>Annual Revenue should not be 0 or less.</errorMessage>
</ValidationRule>