force-app/main/default/objects/Account/listViews/Accont_With_Phone.listView-meta.xml
<ListView>
    <fullName>Accont_With_Phone</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.PHONE1</field>
        <operation>notEqual</operation>
    </filters>
    <label>Accont With Phone</label>
</ListView>